@@ -5,6 +5,7 @@ TMW.CHANGELOG_LASTVER="7.4.0"
 TMW.CHANGELOG = [==[
 
 ===v8.5.3===
+* Guardians icon type now accounts for Implosion and the Consumption talent.
 
 ====Bug Fixes====
 * Fixed #1544 - Blizzard changed return values of GetChannelList(), breaking chat channel text notifications.
