@@ -1,5 +1,6 @@
 
 ===v8.5.3===
+* Guardians icon type now accounts for Implosion and the Consumption talent.
 
 ====Bug Fixes====
 * Fixed #1544 - Blizzard changed return values of GetChannelList(), breaking chat channel text notifications.
